--- a/app/src/main/res/layout-h480dp/activity_dashboard.xml
+++ b/app/src/main/res/layout-h480dp/activity_dashboard.xml
@@ -121,10 +121,11 @@
             <ImageView
                 android:layout_width="150dp"
                 android:layout_height="100dp"
-                android:layout_gravity="center"
-                android:scaleType="centerCrop"
                 android:layout_centerInParent="true"
-                android:background="@drawable/game_logo" />
+                android:layout_gravity="center"
+                android:id="@+id/gameLogoImageView"
+                android:background="@drawable/game_logo"
+                android:scaleType="centerCrop" />
         </RelativeLayout>
         <RelativeLayout
             android:layout_width="match_parent"
