--- a/app/src/main/res/layout-h720dp/activity_history.xml
+++ b/app/src/main/res/layout-h720dp/activity_history.xml
@@ -67,7 +67,6 @@
         />
 
   <androidx.recyclerview.widget.RecyclerView
-      android:visibility="visible"
       android:layout_below="@+id/header"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
@@ -81,7 +80,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         ads:adSize="FULL_BANNER"
-        ads:adUnitId="@string/banner_adunit"></com.google.android.gms.ads.AdView>
+        ads:adUnitId="@string/banner_adunit"/>
 
 
 </RelativeLayout>
