--- a/app/src/main/res/layout-h600dp/activity_main.xml
+++ b/app/src/main/res/layout-h600dp/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,206 +7,219 @@
     android:background="@color/white"
     android:orientation="vertical"
     tools:context=".MainActivity">
- <ScrollView
-     android:layout_width="match_parent"
-     android:layout_height="match_parent"
-     android:fillViewport="true">
 
-  <LinearLayout
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:orientation="vertical"
-      >
-
-   <ImageView
-       android:id="@+id/dd_logo"
-       android:layout_width="match_parent"
-       android:layout_height="150dp"
-       android:layout_marginRight="50dp"
-       android:layout_marginLeft="50dp"
-       android:layout_centerHorizontal="true"
-       android:alpha="0"
-       android:layout_marginBottom="20dp"
-       android:layout_marginTop="50dp"
-       android:src="@mipmap/dd_logo"/>
-
-   <LinearLayout
-       android:id="@+id/container"
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content"
-       android:gravity="center"
-       android:visibility="invisible"
-       android:layout_marginTop="70dp"
-       android:orientation="vertical">
-
-
-
-    <TextView
-        android:id="@+id/train_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/fjalla_one"
-        android:text="We train you on :"
-        android:textColor="@color/basic_color"
-        android:textSize="18sp" />
-    <LinearLayout
-        android:id="@+id/web_development"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="50dp"
-        android:layout_marginRight="50dp"
-        android:layout_marginTop="10dp"
-        android:orientation="horizontal">
-     <RelativeLayout
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
-         android:orientation="vertical">
-      <ImageView
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:src="@drawable/hexagon"
-          android:layout_centerInParent="true"
-          app:tint="#FAA61A"/>
-      <ImageView
-          android:layout_width="32dp"
-          android:layout_height="32dp"
-          app:tint="@color/white"
-          android:layout_centerInParent="true"
-          android:src="@drawable/web_icon"
-          />
+        android:layout_height="match_parent"
+        android:fillViewport="true">
 
-     </RelativeLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-     <TextView
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
-         android:text="Web Development"
-         android:textSize="16sp"
-         android:layout_marginLeft="20dp"
-         android:fontFamily="@font/ultra"
-         android:textColor="@color/black"
-         android:layout_gravity="center_vertical"/>
-    </LinearLayout>
+            <ImageView
+                android:id="@+id/dd_logo"
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
+                android:layout_centerHorizontal="true"
+                android:layout_marginLeft="50dp"
+                android:layout_marginTop="50dp"
+                android:layout_marginRight="50dp"
+                android:layout_marginBottom="20dp"
+                android:alpha="0"
+                android:src="@mipmap/dd_logo" />
 
-    <LinearLayout
-        android:id="@+id/mobile_development"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="50dp"
-        android:layout_marginRight="50dp"
-        android:layout_marginTop="10dp"
-        android:orientation="horizontal">
-     <RelativeLayout
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
-         android:orientation="vertical">
-      <ImageView
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:src="@drawable/hexagon"
-          android:layout_centerInParent="true"
-          app:tint="#FAA61A"/>
-      <ImageView
-          android:layout_width="32dp"
-          android:layout_height="32dp"
-          app:tint="@color/white"
-          android:layout_centerInParent="true"
-          android:src="@drawable/ic_baseline_android_24"
-          />
-
-     </RelativeLayout>
-
-     <TextView
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
-         android:text="Mobile Development"
-         android:textSize="16sp"
-         android:layout_marginLeft="20dp"
-         android:fontFamily="@font/ultra"
-         android:textColor="@color/black"
-         android:layout_gravity="center_vertical"/>
-    </LinearLayout>
-    <LinearLayout
-        android:id="@+id/digital_marketing"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="50dp"
-        android:layout_marginRight="50dp"
-        android:layout_marginTop="10dp"
-        android:orientation="horizontal">
-     <RelativeLayout
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
-         android:orientation="vertical">
-      <ImageView
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:src="@drawable/hexagon"
-          android:layout_centerInParent="true"
-          app:tint="#FAA61A"/>
-      <ImageView
-          android:layout_width="32dp"
-          android:layout_height="32dp"
-          app:tint="@color/white"
-          android:layout_centerInParent="true"
-          android:src="@drawable/marketing"
-          />
-
-     </RelativeLayout>
-
-     <TextView
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
-         android:text="Digital Marketing"
-         android:textSize="16sp"
-         android:layout_marginLeft="20dp"
-         android:fontFamily="@font/ultra"
-         android:textColor="@color/black"
-         android:layout_gravity="center_vertical"/>
-    </LinearLayout>
-    <LinearLayout
-        android:id="@+id/data_science"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="50dp"
-        android:layout_marginRight="50dp"
-        android:layout_marginTop="10dp"
-        android:orientation="horizontal">
-     <RelativeLayout
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
-         android:orientation="vertical">
-      <ImageView
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:src="@drawable/hexagon"
-          android:layout_centerInParent="true"
-          app:tint="#FAA61A"/>
-      <ImageView
-          android:layout_width="32dp"
-          android:layout_height="32dp"
-          app:tint="@color/white"
-          android:layout_centerInParent="true"
-          android:src="@drawable/ic_baseline_cloud_24"
-          />
-
-     </RelativeLayout>
-
-     <TextView
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
-         android:text="Data Science"
-         android:textSize="16sp"
-         android:layout_marginLeft="20dp"
-         android:fontFamily="@font/ultra"
-         android:textColor="@color/black"
-         android:layout_gravity="center_vertical"/>
-    </LinearLayout>
-   </LinearLayout>
+            <LinearLayout
+                android:id="@+id/container"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="70dp"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:visibility="invisible">
 
 
+                <TextView
+                    android:id="@+id/train_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/fjalla_one"
+                    android:text="@string/we_train_you_on"
+                    android:textColor="@color/basic_color"
+                    android:textSize="18sp" />
 
-  </LinearLayout>
- </ScrollView>
+                <LinearLayout
+                    android:id="@+id/web_development"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="50dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginRight="50dp"
+                    android:orientation="horizontal">
+
+                    <RelativeLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerInParent="true"
+                            android:src="@drawable/hexagon"
+                            app:tint="#FAA61A" />
+
+                        <ImageView
+                            android:layout_width="32dp"
+                            android:layout_height="32dp"
+                            android:layout_centerInParent="true"
+                            android:src="@drawable/web_icon"
+                            app:tint="@color/white" />
+
+                    </RelativeLayout>
+
+                    <TextView
+                        android:id="@+id/web_dev_txt"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginStart="20dp"
+                        android:fontFamily="@font/ultra"
+                        android:text="@string/web_development"
+                        android:textColor="@color/black"
+                        android:textSize="16sp" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/mobile_development"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="50dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginRight="50dp"
+                    android:orientation="horizontal">
+
+                    <RelativeLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerInParent="true"
+                            android:src="@drawable/hexagon"
+                            app:tint="#FAA61A" />
+
+                        <ImageView
+                            android:layout_width="32dp"
+                            android:layout_height="32dp"
+                            android:layout_centerInParent="true"
+                            android:src="@drawable/ic_baseline_android_24"
+                            app:tint="@color/white" />
+
+                    </RelativeLayout>
+
+                    <TextView
+                        android:id="@+id/mobile_txt"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginStart="20dp"
+                        android:fontFamily="@font/ultra"
+                        android:text="@string/mobile_development"
+                        android:textColor="@color/black"
+                        android:textSize="16sp" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/digital_marketing"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="50dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginRight="50dp"
+                    android:orientation="horizontal">
+
+                    <RelativeLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerInParent="true"
+                            android:src="@drawable/hexagon"
+                            app:tint="#FAA61A" />
+
+                        <ImageView
+                            android:layout_width="32dp"
+                            android:layout_height="32dp"
+                            android:layout_centerInParent="true"
+                            android:src="@drawable/marketing"
+                            app:tint="@color/white" />
+
+                    </RelativeLayout>
+
+                    <TextView
+                        android:id="@+id/digital_marketing_txt"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginStart="20dp"
+                        android:fontFamily="@font/ultra"
+                        android:text="@string/digital_marketing"
+                        android:textColor="@color/black"
+                        android:textSize="16sp" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/data_science"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="50dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginRight="50dp"
+                    android:orientation="horizontal">
+
+                    <RelativeLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerInParent="true"
+                            android:src="@drawable/hexagon"
+                            app:tint="#FAA61A" />
+
+                        <ImageView
+                            android:layout_width="32dp"
+                            android:layout_height="32dp"
+                            android:layout_centerInParent="true"
+                            android:src="@drawable/ic_baseline_cloud_24"
+                            app:tint="@color/white" />
+
+                    </RelativeLayout>
+
+                    <TextView
+                        android:id="@+id/data_science_txt"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginStart="20dp"
+                        android:fontFamily="@font/ultra"
+                        android:text="@string/data_science"
+                        android:textColor="@color/black"
+                        android:textSize="16sp" />
+                </LinearLayout>
+            </LinearLayout>
+
+
+        </LinearLayout>
+    </ScrollView>
 
 </LinearLayout>
