--- a/app/src/main/res/layout-h300dp/activity_setting.xml
+++ b/app/src/main/res/layout-h300dp/activity_setting.xml
@@ -37,7 +37,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Settings"
+            android:text="@string/settings"
             android:textSize="24sp"
             android:fontFamily="@font/ultra"
             android:textColor="@color/white"
