--- a/app/src/main/res/layout-h720dp/settings_dialog.xml
+++ b/app/src/main/res/layout-h720dp/settings_dialog.xml
@@ -1,77 +1,80 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    app:cardBackgroundColor="@color/purple_500"
-    android:layout_margin="20dp"
     android:id="@+id/rootview"
-    android:layout_height="wrap_content">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="20dp"
+    android:orientation="vertical"
+    app:cardBackgroundColor="@color/purple_500">
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
+
         <ImageView
             android:id="@+id/close"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_margin="10dp"
-            android:src="@drawable/ic_baseline_close_24"/>
+            android:src="@drawable/ic_baseline_close_24" />
+
         <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_below="@id/close"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
             android:orientation="vertical">
-        <androidx.cardview.widget.CardView
-            android:id="@+id/sound_"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:cardBackgroundColor="@color/basic_color"
-            app:contentPadding="8dp"
-            android:layout_margin="10dp"
-            >
 
-            <RelativeLayout
+            <androidx.cardview.widget.CardView
+                android:id="@+id/sound_"
                 android:layout_width="match_parent"
-                android:layout_height="38dp">
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                app:cardBackgroundColor="@color/basic_color"
+                app:contentPadding="8dp">
 
-                <ImageView
-                    android:id="@+id/sound_img"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_baseline_volume_up_24" />
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="38dp">
 
-                <TextView
-                    android:id="@+id/sound"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:fontFamily="@font/montserrat"
-                    android:text="@string/sound_on"
-                    android:textColor="@color/white"
-                    android:textSize="18sp"
-                    android:textStyle="bold" />
-            </RelativeLayout>
-        </androidx.cardview.widget.CardView>
+                    <ImageView
+                        android:id="@+id/sound_img"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_baseline_volume_up_24" />
+
+                    <TextView
+                        android:id="@+id/sound"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:fontFamily="@font/montserrat"
+                        android:text="@string/sound_on"
+                        android:textColor="@color/white"
+                        android:textSize="18sp"
+                        android:textStyle="bold" />
+                </RelativeLayout>
+            </androidx.cardview.widget.CardView>
+
             <androidx.cardview.widget.CardView
                 android:id="@+id/change_language"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:cardBackgroundColor="@color/basic_color"
-                app:contentPadding="8dp"
                 android:layout_margin="10dp"
-                >
+                app:cardBackgroundColor="@color/basic_color"
+                app:contentPadding="8dp">
+
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
+
                     <ImageView
                         android:id="@+id/lang_flag"
                         android:layout_width="48dp"
                         android:layout_height="48dp"
-                        android:src="@drawable/united_kingdom"
-                        />
+                        android:src="@drawable/united_kingdom" />
 
                     <TextView
                         android:id="@+id/language"
@@ -85,61 +88,65 @@
                         android:textStyle="bold" />
                 </RelativeLayout>
             </androidx.cardview.widget.CardView>
+
             <androidx.cardview.widget.CardView
                 android:id="@+id/select_theme"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:cardBackgroundColor="@color/basic_color"
-                app:contentPadding="8dp"
                 android:layout_margin="10dp"
-                >
+                app:cardBackgroundColor="@color/basic_color"
+                app:contentPadding="8dp">
+
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
+
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/ic_baseline_color_lens_24"
-                        />
+                        android:src="@drawable/ic_baseline_color_lens_24" />
+
                     <TextView
                         android:id="@+id/theme"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:fontFamily="@font/montserrat"
                         android:text="@string/select_a_theme"
                         android:textColor="@color/white"
-                        android:layout_centerInParent="true"
                         android:textSize="18sp"
-                        android:fontFamily="@font/montserrat"
-                        android:textStyle="bold"/>
+                        android:textStyle="bold" />
                 </RelativeLayout>
             </androidx.cardview.widget.CardView>
+
             <androidx.cardview.widget.CardView
                 android:id="@+id/game_mode_"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:cardBackgroundColor="@color/basic_color"
-                app:contentPadding="8dp"
                 android:layout_margin="10dp"
-                >
+                app:cardBackgroundColor="@color/basic_color"
+                app:contentPadding="8dp">
+
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
+
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        app:tint="@color/white"
                         android:src="@drawable/ic_sports_esports_black_48dp"
-                        />
+                        app:tint="@color/white" />
+
                     <TextView
                         android:id="@+id/game_mode"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:fontFamily="@font/montserrat"
                         android:text="@string/game_mode"
                         android:textColor="@color/white"
-                        android:layout_centerInParent="true"
                         android:textSize="18sp"
-                        android:fontFamily="@font/montserrat"
-                        android:textStyle="bold"/>
+                        android:textStyle="bold" />
 
                     <TextView
                         android:id="@+id/mode_setting"
@@ -153,44 +160,47 @@
                         android:textSize="16sp" />
                 </RelativeLayout>
             </androidx.cardview.widget.CardView>
+
             <androidx.cardview.widget.CardView
                 android:id="@+id/vibration_"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:cardBackgroundColor="@color/basic_color"
-                app:contentPadding="8dp"
                 android:layout_margin="10dp"
-                >
+                app:cardBackgroundColor="@color/basic_color"
+                app:contentPadding="8dp">
+
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
+
                     <RelativeLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content">
+
                         <ImageView
-                        android:id="@+id/vibration_icon"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/ic_baseline_vibration_24"
-                        />
+                            android:id="@+id/vibration_icon"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/ic_baseline_vibration_24" />
+
                         <ImageView
                             android:id="@+id/bad"
-                            android:visibility="gone"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:src="@drawable/ic_baseline_close_24"
-                            />
+                            android:visibility="gone" />
                     </RelativeLayout>
+
                     <TextView
                         android:id="@+id/vibration"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:fontFamily="@font/montserrat"
                         android:text="@string/taptic"
                         android:textColor="@color/white"
-                        android:layout_centerInParent="true"
                         android:textSize="18sp"
-                        android:fontFamily="@font/montserrat"
-                        android:textStyle="bold"/>
+                        android:textStyle="bold" />
                 </RelativeLayout>
             </androidx.cardview.widget.CardView>
         </LinearLayout>
