--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -35,6 +35,7 @@
         android:layout_below="@id/close_container"
         android:orientation="vertical">
         <TextView
+            android:id="@+id/settingsTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/settings"
