--- a/app/src/main/res/layout-h300dp/languages_dialog.xml
+++ b/app/src/main/res/layout-h300dp/languages_dialog.xml
@@ -29,7 +29,7 @@
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
-                  android:text="Select a Language"
+                  android:text="@string/select_a_language"
                   android:textSize="22sp"
                   android:textColor="@color/white"
                   android:textStyle="bold"
