--- a/app/src/main/res/layout-h720dp/activity_count_down.xml
+++ b/app/src/main/res/layout-h720dp/activity_count_down.xml
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/rootview"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:id="@+id/rootview"
     android:background="@color/basic_color"
-   >
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -20,22 +17,21 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginBottom="20dp"
             android:layout_marginTop="50dp"
+            android:layout_marginBottom="20dp"
             android:gravity="center"
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/level"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="50dp"
                 android:fontFamily="@font/ultra"
                 android:text="@string/count_down_level"
                 android:textColor="@color/white"
                 android:textSize="40sp"
-                android:textStyle="bold"
-                android:id="@+id/level"
-                android:layout_marginBottom="50dp"
-                />
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/amount_to_win"
@@ -53,20 +49,18 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
             android:fontFamily="@font/ultra"
             android:text="@string/get_ready"
             android:textColor="@color/white"
             android:textSize="26sp"
-            android:textStyle="bold"
-            android:layout_marginTop="20dp"
-            />
+            android:textStyle="bold" />
 
 
         <RelativeLayout
             android:id="@+id/hex"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="50dp">
 
@@ -94,6 +88,5 @@
         </RelativeLayout>
 
     </LinearLayout>
-
 
 </RelativeLayout>
